ci: update deploy workflow to use pnpm

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,17 +15,22 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
+      - name: Setup pnpm 🌸
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Install Dependencies 🔧
-        run: npm ci
+        run: pnpm install
 
       - name: Build 🏗️
-        run: npm run build
+        run: pnpm build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
