--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,18 +16,18 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup pnpm 🌸
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10
 
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22
           cache: "pnpm"
 
       - name: Install Dependencies 🔧
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Build 🏗️
         run: pnpm build
